# -Zephyr-sample-for-working-with-KConfig-and-CMakeLists

./: CMakeLists.txt  Kconfig  README.md  prj.conf
app/: CMakeLists.txt  Kconfig  main.c
app/example_module/: CMakeLists.txt  Kconfig  example_module.c  example_module.h
src/: CMakeLists.txt  Kconfig  main.c
src/example_module/: CMakeLists.txt  Kconfig.other_conf
